gravitee-apim-portal-webui/src/assets/styles/asyncapi-component.css
/* ... */
.prose img{
  margin-top: 2em;
  margin-bottom: 2em;
}

.prose video{
  margin-top: 2em;
  margin-bottom: 2em;
}

.prose figure{
  margin-top: 2em;
  margin-bottom: 2em;
}

.prose figure > *{
  margin-top: 0;
  margin-bottom: 0;
}

.prose h2 code{
  font-size: 0.875em;
}

.prose h3 code{
  font-size: 0.9em;
}

.prose ol{
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.prose ul{
  margin-top: 1.25em;
  margin-bottom: 1.25em;
}

.prose li{
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.prose > ul > li p{
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

.prose > ul > li > *:first-child{
  margin-top: 1.25em;
}

.prose > ul > li > *:last-child{
  margin-bottom: 1.25em;
}

.prose > ol > li > *:first-child{
  margin-top: 1.25em;
}

.prose > ol > li > *:last-child{
  margin-bottom: 1.25em;
}

.prose ul ul, .prose ul ol, .prose ol ul, .prose ol ol{
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

.prose hr + *{
  margin-top: 0;
}

.prose h2 + *{
  margin-top: 0;
}

.prose h3 + *{
  margin-top: 0;
}

.prose h4 + *{
  margin-top: 0;
}

.prose thead th:first-child{
  padding-left: 0;
}

.prose thead th:last-child{
  padding-right: 0;
}

.prose tbody td:first-child{
  padding-left: 0;
}

.prose tbody td:last-child{
  padding-right: 0;
}

.prose > :first-child{
  margin-top: 0;
}

.prose > :last-child{
  margin-bottom: 0;
}

@media (min-width: 1024px){
  .container\:base .burger-menu{
    display: none;
  }
}

.container\:xl .burger-menu {
}

@media (min-width: 1024px){
  .container\:base .sidebar{
    display: block;
    height: auto;
    position: relative;
    width: 16rem;
  }
}

.container\:xl .sidebar {
}

@media (min-width: 1024px){
  .container\:base .sidebar--content{
    width: 14rem;
  }
}

.container\:xl .sidebar--content {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
}

@media (min-width: 1536px){
  .container\:base .panel-item{
    display: flex;
  }
}

.container\:xl .panel-item {
  display: block;
}

@media (min-width: 1536px){
  .container\:base .panel--center .panel-item--center{
    width: 58.333333%;
  }
}

@media (min-width: 1536px){
  .container\:base .panel--center .panel-item--right{
    width: 41.666667%;
  }
}

.container\:xl .panel--center .panel-item--center {
  width: 100%;
}

.container\:xl .panel--center .panel-item--right {
  width: 100%;
}

@media (min-width: 1536px){
  .container\:base .examples{
    margin-top: 0px;
    padding: 0px;
  }
}

.container\:xl .examples {
}

.container\:base .panel--right {
  display: none;
}

@media (min-width: 1536px){
  .container\:base .panel--right{
    display: block;
    width: 41.666667%;
  }
}

.container\:xl .panel--right {
  display: none;
}

.prose pre {
  white-space: pre-wrap;
}

.space-y-2 > :not([hidden]) ~ :not([hidden]){
  --tw-space-y-reverse: 0;
  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
}

.space-x-2 > :not([hidden]) ~ :not([hidden]){
  --tw-space-x-reverse: 0;
  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
}

.bg-white{
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
}

.bg-gray-100{
  --tw-bg-opacity: 1;
  background-color: rgba(247, 250, 252, var(--tw-bg-opacity));
}

.bg-gray-200{
  --tw-bg-opacity: 1;
  background-color: rgba(237, 242, 247, var(--tw-bg-opacity));
}

.bg-gray-800{
  --tw-bg-opacity: 1;
  background-color: rgba(45, 55, 72, var(--tw-bg-opacity));
}

.bg-yellow-600{
  --tw-bg-opacity: 1;
  background-color: rgba(214, 158, 46, var(--tw-bg-opacity));
}

.bg-green-600{
  --tw-bg-opacity: 1;
  background-color: rgba(56, 161, 105, var(--tw-bg-opacity));
}

.bg-teal-500{
  --tw-bg-opacity: 1;
  background-color: rgba(56, 178, 172, var(--tw-bg-opacity));
}

.bg-blue-400{
  --tw-bg-opacity: 1;
  background-color: rgba(99, 179, 237, var(--tw-bg-opacity));
}

.bg-blue-500{
  --tw-bg-opacity: 1;
  background-color: rgba(66, 153, 225, var(--tw-bg-opacity));
}

.bg-blue-600{
  --tw-bg-opacity: 1;
  background-color: rgba(49, 130, 206, var(--tw-bg-opacity));
}

.bg-indigo-400{
  --tw-bg-opacity: 1;
  background-color: rgba(127, 156, 245, var(--tw-bg-opacity));
}

.bg-purple-600{
  --tw-bg-opacity: 1;
  background-color: rgba(128, 90, 213, var(--tw-bg-opacity));
}

.hover\:bg-orange-300:hover{
  --tw-bg-opacity: 1;
  background-color: rgba(251, 211, 141, var(--tw-bg-opacity));
}

.hover\:bg-blue-300:hover{
  --tw-bg-opacity: 1;
  background-color: rgba(144, 205, 244, var(--tw-bg-opacity));
}

.hover\:bg-purple-300:hover{
  --tw-bg-opacity: 1;
  background-color: rgba(214, 188, 250, var(--tw-bg-opacity));
}

.border-gray-400{
  --tw-border-opacity: 1;
  border-color: rgba(203, 213, 224, var(--tw-border-opacity));
}

.border-red-500{
  --tw-border-opacity: 1;
  border-color: rgba(245, 101, 101, var(--tw-border-opacity));
}

.border-orange-300{
  --tw-border-opacity: 1;
  border-color: rgba(251, 211, 141, var(--tw-border-opacity));
}

.border-green-600{
  --tw-border-opacity: 1;
  border-color: rgba(56, 161, 105, var(--tw-border-opacity));
}

.border-blue-300{
  --tw-border-opacity: 1;
  border-color: rgba(144, 205, 244, var(--tw-border-opacity));
}

.border-blue-600{
  --tw-border-opacity: 1;
  border-color: rgba(49, 130, 206, var(--tw-border-opacity));
}

.border-purple-300{
  --tw-border-opacity: 1;
  border-color: rgba(214, 188, 250, var(--tw-border-opacity));
}

.rounded{
  border-radius: 0.25rem;
}

.rounded-full{
  border-radius: 9999px;
}

.border-solid{
  border-style: solid;
}

.border{
  border-width: 1px;
}

.border-l-8{
  border-left-width: 8px;
}

.cursor-pointer{
  cursor: pointer;
}

.block{
  display: block;
}

.inline-block{
  display: inline-block;
}

.flex{
  display: flex;
}

.table{
  display: table;
}

.hidden{
  display: none;
}

.flex-wrap{
  flex-wrap: wrap;
}

.items-center{
  align-items: center;
}

.justify-center{
  justify-content: center;
}
/* ... */

